objects/WLD_Status_History__c.object
<CustomObject>
    <description>Tracks status changes for Certifications and Credit Reviews</description>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification</label>
        <referenceTo>WLD_Certification__c</referenceTo>
        <relationshipLabel>Status History</relationshipLabel>
        <relationshipName>Status_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Review</label>
        <referenceTo>WLD_Credit_Review__c</referenceTo>
        <relationshipLabel>Status History</relationshipLabel>
        <relationshipName>Status_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Status</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Linked statuses must belong to the same Certification/Credit Review record</errorMessage>
            <filterItems>
                <field>$Source.Certification__c</field>
                <operation>equals</operation>
                <valueField>WLD_Status_History__c.Certification__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Credit_Review__c</field>
                <operation>equals</operation>
                <valueField>WLD_Status_History__c.Credit_Review__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WLD_Status_History__c</referenceTo>
        <relationshipLabel>Status History (Next Status)</relationshipLabel>
        <relationshipName>Status_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/time status changed</description>
        <label>Status Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_in_Status_days__c</fullName>
        <formula>IF(
  ISBLANK(Next_Status__c),
    /* Current Status */
    /*days*/ 
    FLOOR( NOW() - Status_Date_Time__c ) + 1,
    /* Diff between this status and next status */
    FLOOR( Next_Status__r.Status_Date_Time__c - Status_Date_Time__c) + 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Status (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Status_mins__c</fullName>
        <formula>IF(
  ISBLANK(Next_Status__c),
    /*Current Status*/
    /*days*/ 
    (FLOOR( NOW() - Status_Date_Time__c) * 24 * 60) +
    /*hours*/
    (FLOOR( MOD( (NOW() - Status_Date_Time__c) * 24, 24 ) ) * 60) +
    /*minutes*/
    (ROUND( MOD( (NOW() - Status_Date_Time__c) * 24 * 60, 60 ), 0 )),
    /* Diff between this status and next status */
    /*days*/ 
    (FLOOR( Next_Status__r.Status_Date_Time__c - Status_Date_Time__c) * 24 * 60) +
    /*hours*/
    (FLOOR( MOD( (Next_Status__r.Status_Date_Time__c - Status_Date_Time__c) * 24, 24 ) ) * 60) +
    /*minutes*/
    (ROUND( MOD( (Next_Status__r.Status_Date_Time__c - Status_Date_Time__c) * 24 * 60, 60 ), 0 ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Status (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Status History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>